testing/macro-tests/tests/ui/generated_default_conflict.stderr
error: generated(insert = ...) cannot be combined with default = ...; default is a database/schema default
  --> tests/ui/generated_default_conflict.rs:21:21
   |
21 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
